More information adding at readme fixing menu

--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
 
             <div class="col-sm-3">
               <div class="footer">
-                <h5>Telephone:</h5>
-                <p class="inline-block">
-                    555-4773-5742
-                </p>
+                <h5>E-mail:</h5>
+                  <p class="inline-block">
+                      <a href="contact@batterseapowergym.co.uk">contact@batterseapowergym.co.uk</a>
+                  </p>
               </div>  
             </div>
                       
