--- a/sign.html
+++ b/sign.html
@@ -6,6 +6,9 @@
     <title>BATTERSEA POWER GYM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <script src="https://kit.fontawesome.com/d193b19553.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
@@ -100,7 +103,6 @@
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email address</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Password</label>
@@ -153,5 +155,77 @@
                 </div>
             </div>
         </div>
+
+        <footer class="container-fluid footer-container footer-container--black">
+            <div id="footer-details" class="row">
+              <div class="col-sm-3">
+                <div class="footer">
+                    <h5 class="general-sub">Address:</h5>
+                      <p>  Grosvenor Arch 2, Nine Elms, London</p>
+                      <p>   SW11 8AB</p>
+                </div>
+              </div>
+  
+              <div class="col-sm-3">
+                  <div class="footer">
+                    <h5>Telephone:</h5>
+                    <p class="inline-block">
+                        555-4773-5742
+                    </p>
+                  </div>  
+              </div>
+  
+              <div class="col-sm-3">
+                <div class="footer">
+                  <h5>E-mail:</h5>
+                  <p class="inline-block">
+                      <a href="contact@batterseapowergym.co.uk">contact@batterseapowergym.co.uk</a>
+                  </p>
+                </div>  
+              </div>
+                        
+              <div class="col-sm-3">
+                <div class="footer">
+                  <h5>Social Media:</h5>
+                  <ul class="list-inline social-links">
+                      <li class="list-inline-item">
+                          <a target="_blank" href="#">
+                               <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                               <span class="sr-only">Facebook</span>
+                          </a>
+                      </li>
+                      <li class="list-inline-item">
+                          <a target="_blank" href="#">
+                               <i class="fab fa-twitter" aria-hidden="true"></i>
+                              <span class="sr-only">Twitter</span>
+                          </a>
+                        </li>
+                       <li class="list-inline-item">
+                           <a target="_blank" href="#">
+                              <i class="fab fa-linkedin" aria-hidden="true"></i>
+                              <span class="sr-only">LinkedIn</span>
+                           </a>
+                       </li>
+                      <li class="list-inline-item">
+                          <a target="_blank" href="#">
+                              <i class="fab fa-pinterest" aria-hidden="true"></i>
+                               <span class="sr-only">Pinterest</span>
+                           </a>
+                       </li>
+                       <li class="list-inline-item">
+                           <a target="_blank" href="#">
+                               <i class="fab fa-youtube" aria-hidden="true"></i>
+                               <span class="sr-only">YouTube</span>
+                           </a>
+                       </li>
+                  </ul>
+                </div>
+              </div>
+          </footer>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  
   </body>
 
