--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
   
           <!-- Facilities -->
 
-            <div class="container-wrapper container-wrapper--blue">
-              <div class="container facilities-conteiner content-container">
+          <div class="container-wrapper container-wrapper--blue">
+            <div class="container facilities-conteiner content-container">
               <section class="facilities">
                 <div class="row">
                   <div class="col-12 page-header">
@@ -139,9 +139,9 @@
                   </div>
                   <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="facilities">
-                        <h3><i class="fa-solid fa-video d-none d-sm-block"></i> CCTV Cameras</h3>
-                        <p>Security sistem recording in all publics areas and security staff</p>
-                        <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
+                      <h3><i class="fa-solid fa-dumbbell d-none d-sm-block"></i>Weights Area</h3>
+                      <p>Find equipment to help you flex every major muscle group</p>
+                      <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
                     </div>
                   </div>
                 </div>
@@ -163,46 +163,41 @@
                   </div>
                   <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="facilities">
-                      <h3><i class="fa-solid fa-wifi d-none d-sm-block"></i>Free Wifi</h3>
-                      <p>Our gyms provide free Wi-Fi access to our members</p>
-                      <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-12 col-md-6 col-lg-4">
-                    <div class="facilities">
                       <h3><i class="fa-solid fa-shower d-none d-sm-block"></i>Changing Rooms</h3>
-                        <p>We have lots of lockers available, don't forget your padlock.</p>
-                        <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
-                    </div>
-                  </div>
-                  <div class="col-12 col-md-6 col-lg-4">
-                    <div class="facilities">
-                      <h3><i class="fa-solid fa-dumbbell d-none d-sm-block"></i>Weights Area</h3>
-                      <p>All year long, covered olympic swimming pool for all kind activities</p>
+                      <p>We have lots of lockers available, don't forget your padlock.</p>
                       <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
                     </div>
                   </div>
-                  <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="facilities">
-                      <h3><i class="fa-solid fa-futbol d-none d-sm-block"></i>Sport Courts</h3>
-                        <p>Indoor and outdoor multi-sport game courts for different purposes</p>
-                        <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
-                    </div>
-                  </div>
-                </div>
+                      <div class="d-none d-md-block d-lg-none">
+                          <div class="row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                              <div class="facilities">
+                                <h3><i class="fa-solid fa-shower d-none d-sm-block"></i>Changing Rooms</h3>
+                                <p>We have lots of lockers available, don't forget your padlock.</p>
+                                <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
+                              </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                              <div class="facilities">
+                                <h3><i class="fa-solid fa-dumbbell d-none d-sm-block"></i>Weights Area</h3>
+                                <p>Find equipment to help you flex every major muscle group</p>
+                                <p><a class="btn btn-sm btn-default" href="">Read More</a></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                  
                 </div>
               </section>
             </div>
-            </div>
+          </div>
         <!-- /.facilities -->
 
         <!-- Footer -->
         <footer class="container-fluid footer-container footer-container--black">
           <div class="row">
-            <div class="col-sm-3">
+            <div class="col-12 col-md-6 col-lg-3">
               <div class="footer">
                   <h5>Address:</h5>
                     <p>  Grosvenor Arch 2, Nine Elms, London</p>
@@ -210,7 +205,7 @@
               </div>
             </div>
 
-            <div class="col-sm-3">
+            <div class="col-12 col-md-6 col-lg-3">
                 <div class="footer">
                   <h5>Telephone:</h5>
                   <p class="inline-block">
@@ -219,7 +214,7 @@
                 </div>  
             </div>
 
-            <div class="col-sm-3">
+            <div class="col-12 col-md-6 col-lg-3">
               <div class="footer">
                 <h5>E-mail:</h5>
                   <p class="inline-block">
@@ -228,7 +223,7 @@
               </div>  
             </div>
                       
-            <div class="col-sm-3">
+            <div class="col-12 col-md-6 col-lg-3">
               <div class="footer">
                 <h5>Social Media:</h5>
                 <ul class="list-inline social-links">
