--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="footer">
                 <h5>E-mail:</h5>
-                  <p class="inline-block">
-                      <a href="contact@batterseapowergym.co.uk">contact@batterseapowergym.co.uk</a>
+                  <p>
+                    <a href="contact@batterseapowergym.co.uk">contact@batterseapowergym.com.uk</a>
                   </p>
               </div>  
             </div>
