Sign link repared

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
                     <li class="nav-item mr-2"><a class="nav-link" href="/swimmin">Swimmin Pool</a></li>
                     <li class="nav-item mr-2"><a class="nav-link" href="/contact">Contact</a></li>
-                    <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sing In / Sing Up</a></li>
+                    <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="https://hernanpd.github.io/battersea-gym/sign.html">Sing In / Sing Up</a></li>
                   </ul>
             </div>
 
@@ -101,7 +101,7 @@
                     <h1 class="slogan-big"><i>Change your energy whith us</i></h1>
                     <hr class="block-divider block-divider--green">
                     <p class="lead"><strong> Join Now! Get a 12 month subscription for 8! </strong><a href=""><strong>See here for details!</strong></a></p>
-                    <button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal"><a href="../sign.html" id="sign">Sing In / Sing Up</a></button>
+                    <button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal"><a href="https://hernanpd.github.io/battersea-gym/sign.html" id="sign">Sing In / Sing Up</a></button>
                     
                 </section>
                 </div> 
