--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/d193b19553.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   </head>
   <body>
       <div class="container-fluid navalert-container">
@@ -23,7 +23,7 @@
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSportLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sports
                       </a>
                           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -34,7 +34,7 @@
                           </div>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownClasesLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Clases
                       </a>
                           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -233,12 +233,12 @@
                              <span class="sr-only">Facebook</span>
                         </a>
                     </li>
-                    <li class="list-inline-item">
+                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                              <i class="fab fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                      </li>
+                     </li>
                      <li class="list-inline-item">
                          <a target="_blank" href="#">
                             <i class="fab fa-linkedin" aria-hidden="true"></i>
@@ -260,6 +260,7 @@
                 </ul>
               </div>
             </div>
+          </div>
         </footer>
   <!-- /Footer -->
 
