Dropdown menu repared

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSportLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSportstLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sports
                       </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdownSportsLink">
                             <a class="dropdown-item" href="#">Football</a>
                             <a class="dropdown-item" href="#">Basket</a>
                             <a class="dropdown-item" href="#">Badminton</a>
@@ -37,7 +37,7 @@
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownClasesLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Clases
                       </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdownClasesLink">
                             <a class="dropdown-item" href="#">Pilates</a>
                             <a class="dropdown-item" href="#">Bodypump</a>
                             <a class="dropdown-item" href="#">Group Cycle</a>
