--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSportstLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSporttLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sports
                       </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdownSportsLink">
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdownSportLink">
                             <a class="dropdown-item" href="#">Football</a>
                             <a class="dropdown-item" href="#">Basket</a>
                             <a class="dropdown-item" href="#">Badminton</a>
