Sport link fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSporttLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sports
                       </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdownSportLink">
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdownSporttLink">
                             <a class="dropdown-item" href="#">Football</a>
                             <a class="dropdown-item" href="#">Basket</a>
                             <a class="dropdown-item" href="#">Badminton</a>
