--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <h1 class="slogan-big"><i>Change your energy whith us</i></h1>
                     <hr class="block-divider block-divider--green">
                     <p class="lead"><strong> Join Now! Get a 12 month subscription for 8! </strong><a href=""><strong>See here for details!</strong></a></p>
-                    <button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal"></button> <a href="https://hernanpd.github.io/battersea-gym/sign.html" id="sign">Sing In / Sing Up</a>
+                    <button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal"> <a href="https://hernanpd.github.io/battersea-gym/sign.html" id="sign">Sing In / Sing Up</a></button>
                     
                 </section>
                 </div> 
