--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="dropdown-item" href="#">Aerobic</a>
                           </div>
                     </li>
-                    <li class="nav-item mr-2"><a class="nav-link" href="/swimmin">Swimmin Pool</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link" href="/swimming.html">Swimming Pool</a></li>
                     <li class="nav-item mr-2"><a class="nav-link" href="/contact">Contact</a></li>
                     <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="https://hernanpd.github.io/battersea-gym/sign.html">Sing In / Sing Up</a></li>
                   </ul>
