--- a/swimming.html
+++ b/swimming.html
@@ -25,7 +25,7 @@
                     
                     
                     <li class="nav-item mr-2"><a class="nav-link" href="/swimming.html">Swimming Pool</a></li>
-                    <li class="nav-item mr-2"><a class="nav-link" href="/contact.html">Contact</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link" href="/index.html#contact">Contact</a></li>
                     <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/sign.html">Sing In / Sing Up</a></li>
                   </ul>
             </div>
