--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h1 class="slogan-big"><i>Change your energy whith us</i></h1>
                     <hr class="block-divider block-divider--green">
                     <p class="lead"><strong> Join Now! Get a 12 month subscription for 8! </strong><a href=""><strong>See here for details!</strong></a></p>
-                    <button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal"> <a href="https://hernanpd.github.io/battersea-gym/sign.html" id="sign">Sing In / Sing Up</a></button>
+                    <button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal"> <a href="/sign.html" id="sign">Sing In / Sing Up</a></button>
                     
                 </section>
                 </div> 
@@ -162,19 +162,18 @@
                 </div>
               </section>    
             </div>
-        
-            </div>
           </div>
         <!-- /.facilities -->
 
         <hr>
-        <!-----Contact----->
-        <section id="contact">
-          <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.7237749203687!2d-0.14794653490109225!3d51.48158437963086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760504aca1f909%3A0x8ac4d43c6e9badcd!2sNine%20Elms%2C%20London%20SW11%208AB!5e0!3m2!1sen!2suk!4v1674579992980!5m2!1sen!2suk" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-        </section>
-      <!-----/ Contact----->
+        <!----- Contact ----->
+        <section>
+          <div id="contact">
+            <div class="map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.7237749203687!2d-0.14794653490109225!3d51.48158437963086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760504aca1f909%3A0x8ac4d43c6e9badcd!2sNine%20Elms%2C%20London%20SW11%208AB!5e0!3m2!1sen!2suk!4v1674579992980!5m2!1sen!2suk" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            </div>
+          </section>
+      <!----- / Contact----->
 
         <!-- Footer -->
         <footer class="container-fluid footer-container footer-container--black">
