--- a/index.html
+++ b/index.html
@@ -165,12 +165,14 @@
         <!-- /.facilities -->
 
         <hr>
-        <!----- Contact ----->
-        <section class="contact" id="contact">
-          <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.7237749203687!2d-0.14794653490109225!3d51.48158437963086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760504aca1f909%3A0x8ac4d43c6e9badcd!2sNine%20Elms%2C%20London%20SW11%208AB!5e0!3m2!1sen!2suk!4v1674579992980!5m2!1sen!2suk" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-        </section>
-      <!-----/ Contact----->
+        <!-- Contact ----->
+        <div>
+          <section class="contact" id="contact">
+            <div class="map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.7237749203687!2d-0.14794653490109225!3d51.48158437963086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760504aca1f909%3A0x8ac4d43c6e9badcd!2sNine%20Elms%2C%20London%20SW11%208AB!5e0!3m2!1sen!2suk!4v1674579992980!5m2!1sen!2suk" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          </section>
+        </div>
+        <!-- / .Contact----->
 
         <!-- Footer -->
         <footer class="container-fluid footer-container footer-container--black">
