Fixing Sign button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <h1 class="slogan-big"><i>Change your energy whith us</i></h1>
               <hr class="block-divider block-divider--green">
               <p class="lead"><strong> Join Now! Get a 12 month subscription for 8! </strong><a href=""><strong>See here for details!</strong></a></p>
-              <a href="/sign.html" id="sign"><button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sing In / Sing Up</button></a>
+              <a href="battersea-gym/sign.html" id="sign"><button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sing In / Sing Up</button></a>
             </section>
           </div> 
         </div>
