--- a/sign.html
+++ b/sign.html
@@ -14,7 +14,7 @@
       <div class="container-fluid navalert-container">
        
         <nav class="navbar navbar-dark navbar-expand-sm">
-          <a href="../index.html" class="navbar-brand">BATTERSEA POWER GYM</a>
+          <a href="index.html" class="navbar-brand">BATTERSEA POWER GYM</a>
     
           <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span></button>
