--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item mr-2"><a class="nav-link" href="#index.html#facilities">Facilities</a></li>
-                    <li class="nav-item mr-2"><a class="nav-link" href="#swimming.html">Swimming Pool</a></li>
-                    <li class="nav-item mr-2"><a class="nav-link" href="#index.html#contact">Contact</a></li>
-                    <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="#sign.html">Sing In / Sing Up</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link" href="index.html#facilities">Facilities</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link" href="swimming.html">Swimming Pool</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link" href="index.html#contact">Contact</a></li>
+                    <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="sign.html">Sing In / Sing Up</a></li>
                   </ul>
             </div>
 
