--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-12">
             <section class="callout jumbotron text-center">
-              <h1 class="slogan-big"><i>Change your energy whith us</i></h1>
+              <h1 class="slogan-big"><i>Change your energy with us</i></h1>
               <hr class="block-divider block-divider--green">
               <p class="lead"><strong> Join Now! Get a 12 month subscription for 8! </strong><a href=""><strong>See here for details!</strong></a></p>
               <a href="sign.html" id="sign"><button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sing In / Sing Up</button></a>
