--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <h1 class="slogan-big"><i>Change your energy with us</i></h1>
               <hr class="block-divider block-divider--green">
               <p class="lead"><strong> Join Now! Get a 12 month subscription for 8! </strong><a href=""><strong>See here for details!</strong></a></p>
-              <a href="sign.html" id="sign"><button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sing In / Sing Up</button></a>
+              <button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal" onclick="location.href='sign.html'" id="sign">Sing In / Sing Up</button>
             </section>
           </div> 
         </div>
@@ -89,7 +89,7 @@
   
           <!-- Facilities -->
         
-          <div class="container-wrapper container-wrapper--blue">
+          <div class="container-wrapper container-wrapper--blue">''
             <div class="container facilities-conteiner content-container">
               <section class="facilities" id="facilities">
                 <div class="row">
