--- a/sign.html
+++ b/sign.html
@@ -123,7 +123,8 @@
                                   I agree all statements in <a href="#!">Terms of service</a>
                                    </label>
                             </div>
-        
+                            
+                            <div>
                                  <button type="submit" class="btn btn--cta btn--red">Register</button>
                             </div>
                         </form>
